[package]
name = "gmod-filestealer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
detour = "0.8.1"
regex = "1.6.0"

[dependencies.windows]
version = "0.42.0"
features = [
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_System_SystemServices"
]

[lib]
crate-type = ["cdylib"]
